<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_item_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="app.zingo.employeemanagements.ui.Admin.CreateTaskScreen">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.5"
        android:scrollbars="none"
        android:padding="10dp"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/task_InputLayout"
                android:paddingStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/editTextColor"
                android:hint="@string/task_name" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/grey"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginEnd="5dp"
                    android:paddingStart="5dp"
                    android:id="@+id/from_date_TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/editTextColor"
                    android:hint="@string/from_date"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/from_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:focusableInTouchMode="false"
                        android:textColor="@color/grey"
                        android:drawableEnd="@drawable/ic_date"
                        android:inputType="date"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/to_date_TextInputEditText"
                    android:layout_marginStart="5dp"
                    android:paddingStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/editTextColor"
                    android:hint="@string/to_date"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/to_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:focusableInTouchMode="false"
                        android:textColor="@color/grey"
                        android:drawableEnd="@drawable/ic_date"
                        android:inputType="date"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginEnd="5dp"
                    android:paddingStart="5dp"
                    android:id="@+id/from_time_TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/editTextColor"
                    android:hint="@string/from_time"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/from_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:focusableInTouchMode="false"
                        android:textColor="@color/grey"
                        android:drawableEnd="@drawable/ic_time"
                        android:inputType="time"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginStart="5dp"
                    android:paddingStart="5dp"
                    android:id="@+id/to_time_TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/editTextColor"
                    android:hint="@string/to_time"
                    android:layout_weight="1">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/to_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:focusableInTouchMode="false"
                        android:textColor="@color/grey"
                        android:drawableEnd="@drawable/ic_time"
                        android:inputType="time"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="5dp"
                android:paddingStart="5dp"
                android:id="@+id/task_desc_TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/editTextColor"
                android:hint="@string/discription">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_desc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|start"
                    android:lines="5"
                    android:textColor="@color/grey"
                    android:singleLine="false"
                    android:textSize="16sp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_margin="5dp"
                android:id="@+id/show_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/mark_on_map"
                android:layout_marginTop="20dp"
                android:textOff="@string/no"
                android:textOn="@string/yes"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map_layout"
                android:visibility="gone">

                <TextView
                    android:id="@+id/location_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/location"
                    android:textColor="@color/grey"
                    android:background="@color/editTextColor"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

                <LinearLayout
                    android:id="@+id/lan_lat"
                    android:layout_below="@+id/location_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:weightSum="2">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/editTextColor"
                        android:hint="@string/latitude">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lat_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/grey"
                            android:inputType="textPersonName"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/editTextColor"
                        android:hint="@string/longitude">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lng_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:focusableInTouchMode="false"
                            android:textColor="@color/grey"
                            android:inputType="textPersonName"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <app.zingo.employeemanagements.Custom.MapViewScroll
                    android:id="@+id/task_location_map"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@+id/lan_lat"
                    android:layout_marginTop="10dp"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:weightSum="2"
        android:background="@color/colorPrimary">

        <TextView android:id="@+id/create_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:text="@string/submit"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
    </LinearLayout>

</LinearLayout>